sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:5: error: '<-' expected but ')' found.
    for(i <--getNombreValeurs()-2 to 0){
                                      ^AlgBubbleSort2:13: error: illegal start of simple expression
  }
  ^